// consignment-service/proto/consignment/consignment.proto

syntax = "proto3";

package go.micro.srv.consignment; 

service ConsignmentService {  
  rpc CreateConsignment(Consignment)returns (Response) {}

  // 创建一个新方法
  rpc GetConsignments(GetRequest) returns (Response) {}
}

message Consignment {  
  string id = 1;
  string description = 2;
  int32 weight = 3; 
  repeated Container containers = 4;
  string vessel_id = 5;
}
message Container {  
  string id = 1;
  string customer_id = 2;
  string origin = 3;
  string user_id = 4;
}
// 增加一个空白的获取请求
message GetRequest {}

message Response {  
  bool created = 1;
  Consignment consignment = 2;

  // 增加一个数组，用来返回委托列表
  repeated Consignment consignments = 3;

}
